--- a/08-ansible-02-playbook/playbook/inventory/prod.yml
+++ b/08-ansible-02-playbook/playbook/inventory/prod.yml
@@ -1,6 +1,11 @@
 ---
 elasticsearch:
   hosts:
-    localhost:
-      ansible_connection: ssh
+    ubuntu:
+      ansible_connection: docker
+      ansible_user: root
+kibana:
+  hosts:
+    ubuntu:
+      ansible_connection: docker
       ansible_user: root
